# Transactions

./: Account.cpp  Account.h  CMakeLists.txt  Deposit.cpp  Deposit.h  Persona.cpp  Persona.h  Transaction.h  Withdrawal.cpp  Withdrawal.h  main  main.cpp  transazioni.txt
TRANSACTION/: transazioni.txt
TRANSACTION/Accounts/: 123456_transactions.csv  12345_transactions.csv  1234_transactions.csv  123_transactions.csv  12_transactions.csv  1_transactions.csv
tests/: test_Account.cpp  test_Deposit.cpp  test_Persona.cpp  test_Withdrawal.cpp  test_example.cpp  test_main.cpp
